* search did not filter on class id in Ie caused by .postData bug in ez_core.js
* Fixed bug #010780: It's hard to add items to ClassDescription[] from content.ini.append in extensions
* Fixed bug #009558: [EmbedViewModeSettings] and [ImageDataTypeSettings] in site.ini
* cleaned up custom attribute type ini settings and added support for hidden and checkbox types

5.0beta
* clicking search buttons does not work (hides link dialog)
* fixed some ie6 issues in browse / search and custom tag popup
* let link / anchor buttons edit currently selected link / anchor
* Fixed table size selector styling bug in Opera
* Allow limiting AvailableClasses list based on embed class type
 (see bottom of content.ini for more info)
 * Made it easier to remove embed tags (node is now removed if you use del / backspace)
 * Made it possible to select root nodes when browsing & content node is now pre browsed for convinience
 * updated TinyMCE to 3.0.8
 * Added a help/about dialog, enabled help button.

0.99
* embed image issues ( 'view' not correct and not changable )
* paging on embed search added
* ed.selection.select() not working in Safari and Opera, switched to passing node as window param
* let theme handle non editable content (embed tags) because of ed.selection.select() issue, removed plugin
* custom tags now properly switching tags from div to span and back when changed.
* made all poup dialogs use one unified and extendable javascript api for common funcions
* clearing float on embed and custom block tags
* Fixed nested custom inline tags
* merging cells when cells where cells where TH type fixed
* removed support for Opera v9.2 ( now only 9.5 and higher is supported )
* some changes with float / align on embed elements
* completed i18n translation, using a custom i18n generator (classes/ezoepackerfunctions.php)
  to generate i18n strings for TinyMCE
* Updated TinyMCE to 3.0.6.2
* now possible to disable packer with DevelopmentMode setting in ezoe.ini